--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     
     <h1>Index</h1>
+    <button id="handleBtn" >Time Baraw</button>
     <script src="main.js"></script>
 </body>
 </html>
